--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -37,26 +37,17 @@ when@test:
                 path: "%kernel.logs_dir%/%kernel.environment%.log"
                 level: debug
 
+# https://symfony.com/doc/current/logging.html#handlers-that-modify-log-entries
 when@prod:
     monolog:
         handlers:
-            main:
+            filter_for_errors:
                 type: fingers_crossed
+                # if *one* log is error or higher, pass *all* to file_log
                 action_level: error
-                handler: nested
-                excluded_http_codes: [404, 405]
-                buffer_size: 50 # How many messages should be saved? Prevent memory leaks
-            nested:
+                handler: file_log
+
+            # now passed *all* logs, but only if one log is error or higher
+            file_log:
                 type: stream
-                path: php://stderr
-                level: debug
-                formatter: monolog.formatter.json
-            console:
-                type: console
-                process_psr_3_messages: false
-                channels: ["!event", "!doctrine"]
-            deprecation:
-                type: stream
-                channels: [deprecation]
-                path: php://stderr
-                formatter: monolog.formatter.json
+                path: "%kernel.logs_dir%/%kernel.environment%.log"
